[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://Script/Shop/MysteryShop.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c6bm6axcirofk" path="res://Art/Shop/ShopBg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cy80msegahbes" path="res://Art/Shop/OtheBg1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://q7m4p7hcubj5" path="res://Art/Shop/OtheBg2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cvgmoms32pccn" path="res://Art/Shop/OtheBg3.png" id="5"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="6"]
[ext_resource type="FontFile" uid="uid://bpxndwys2y6cp" path="res://Font/1_fonts.FZCY_FZCuYuan-M03.ttf" id="7"]
[ext_resource type="Texture2D" uid="uid://b0q3kxidiw4m1" path="res://Art/Shop/CureTimes1.png" id="8"]
[ext_resource type="Texture2D" uid="uid://n2gpdjgeqlhg" path="res://Art/Shop/CureTimes2.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c7nagxggf0wq" path="res://Art/Shop/Close1.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dbxifovgpm5cs" path="res://Art/Shop/Close2.png" id="11"]
[ext_resource type="PackedScene" uid="uid://23ftjo25gmeg" path="res://Scene/Shop/MysteryShopItemBox.tscn" id="12"]

[node name="MysteryShop" type="Node2D"]
script = ExtResource( "1" )

[node name="BBg" type="ColorRect" parent="."]
offset_left = -216.0
offset_top = -119.0
offset_right = 1214.0
offset_bottom = 754.0
color = Color(0, 0, 0, 0.0313726)
metadata/_edit_lock_ = true

[node name="ShopBg" type="Sprite2D" parent="."]
position = Vector2(458, 293)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="OtheBg1" type="Sprite2D" parent="ShopBg"]
position = Vector2(66, -56)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="OtheBg2" type="Sprite2D" parent="ShopBg"]
position = Vector2(-74, 108)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="OtheBg3" type="Sprite2D" parent="ShopBg"]
position = Vector2(178, 65)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="ttext" type="Label" parent="ShopBg/OtheBg3"]
offset_left = -146.0
offset_top = -19.0
offset_right = 143.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 12
text = "每次购买需要消耗一次购买次数，一个神秘令牌可以换取一次购买次数，神秘令牌部分小怪小概率掉落。也可以消耗灵魂直接购买次数。第五摊位开启概率极低，商品很贵，建议积攒足够的次数和灵魂再来！！"
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="AllTimes" type="Label" parent="ShopBg"]
offset_left = -186.0
offset_top = -155.0
offset_right = -1.0
offset_bottom = -132.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource( "7" )
text = "购买次数：199"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AllLH" type="Label" parent="ShopBg"]
offset_left = 11.0
offset_top = -153.0
offset_right = 324.0
offset_bottom = -130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource( "7" )
text = "剩余灵魂：10291089138200000000"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="PurchasePurchaseTimes" type="TextureButton" parent="ShopBg"]
offset_left = 106.0
offset_top = 120.0
offset_right = 258.0
offset_bottom = 186.0
texture_normal = ExtResource( "8" )
texture_pressed = ExtResource( "8" )
texture_hover = ExtResource( "9" )
texture_disabled = ExtResource( "8" )
metadata/_edit_lock_ = true

[node name="Close" type="TextureButton" parent="ShopBg"]
offset_left = 340.0
offset_top = -220.0
offset_right = 385.0
offset_bottom = -176.0
texture_normal = ExtResource( "10" )
texture_pressed = ExtResource( "10" )
texture_hover = ExtResource( "11" )
texture_disabled = ExtResource( "10" )
metadata/_edit_lock_ = true

[node name="ShopItemList" type="HBoxContainer" parent="ShopBg"]
offset_left = -187.0
offset_top = -125.0
offset_right = 320.0
offset_bottom = 17.0
theme_override_constants/separation = 9
metadata/_edit_lock_ = true

[node name="MysteryShopItemBox" parent="ShopBg/ShopItemList" instance=ExtResource( "12" )]
layout_mode = 2

[node name="MysteryShopItemBox2" parent="ShopBg/ShopItemList" instance=ExtResource( "12" )]
layout_mode = 2

[node name="MysteryShopItemBox3" parent="ShopBg/ShopItemList" instance=ExtResource( "12" )]
layout_mode = 2

[node name="MysteryShopItemBox4" parent="ShopBg/ShopItemList" instance=ExtResource( "12" )]
layout_mode = 2

[node name="MysteryShopItemBox5" parent="ShopBg/ShopItemList" instance=ExtResource( "12" )]
layout_mode = 2

[connection signal="pressed" from="ShopBg/PurchasePurchaseTimes" to="." method="_on_purchase_purchase_times_pressed" flags=18]
[connection signal="pressed" from="ShopBg/Close" to="." method="_on_close_pressed" flags=18]
